--- a/_posts/2017-03-31-traitors-blade-review.html
+++ b/_posts/2017-03-31-traitors-blade-review.html
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Book Review - Traitor's Blade by Sebastien de Castell"
+title:  "Traitor's Blade by Sebastien de Castell"
 date:   2017-03-31 00:00:00 +0000
 category: Book Review
 excerpt: "For my first ever book review, I'm writing about Sebastien de Castell's fantasy debut: Traitor's Blade."
@@ -39,7 +39,7 @@ img-alt: Traitor's Blade Book Cover
 <h3>Overall</h3>
 <p>de Castell's novel hooked me from the get-go with mystery and the promise of a new fantasy world.</p>
 
-<figure>
+<figure class="figure--center">
   <img src="/img/traitors-blade-map.jpg" alt="Map of Trista" />
   <figcaption>Map of Trista</figcaption>
 </figure>
