--- a/_posts/2017-03-31-traitors-blade-review.html
+++ b/_posts/2017-03-31-traitors-blade-review.html
@@ -3,7 +3,7 @@ layout: post
 title:  "Traitor's Blade by Sebastien de Castell"
 date:   2017-03-31 00:00:00 +0000
 category: Book Review
-excerpt: "For my first ever book review, I'm writing about Sebastien de Castell's fantasy debut: Traitor's Blade."
+excerpt: "A review of Sebastien de Castell's fantasy debut, Traitor's Blade."
 img-src: /img/traitors-blade-thumbnail.jpg
 img-alt: Traitor's Blade Book Cover
 ---
@@ -60,6 +60,8 @@ img-alt: Traitor's Blade Book Cover
 
 <h3>The book itself</h3>
 <p>I was lucky enough to get a signed, numbered, first edition from Goldsboro Books - number 217!</p>
+
+<img src="/img/traitors-blade-signed.jpg" alt="Traitor's Blade Signed Page" />
 
 <p>Check out their website for more signed editions <a href="http://www.goldsborobooks.com/" target="_blank">http://www.goldsborobooks.com/</a></p>
 
