--- a/about.html
+++ b/about.html
@@ -4,4 +4,4 @@ title: About
 permalink: /about/
 ---
 
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+<p>Hi, my name's Hannah! I'm a professional content writer currently working at Virtual College as an instructional designer. In my spare time I love to read, write, game and craft. This blog is my way of sharing my passion with others, so please enjoy!</p>
